# hiss2

./: CHANGELOG.md  README.md  cabal.project  cissp-acronyms.txt  hiss2.cabal
app/: Cissp.hs  Main.hs
