cabal-version:   3.4
name:            hiss2
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          andrii
maintainer:      25188+unorsk@users.noreply.github.com
category:        Text
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

executable hiss2
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base                  ^>=4.19.0.0
    , haskeline
    , optparse-applicative
    , split

  hs-source-dirs:   app
  default-language: GHC2021
